Move condition stuff to sub-module

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
   <artifactId>neverpile-commons</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>neverpile-commons</name>
+  
+  <packaging>pom</packaging>
 
   <properties>
     <java.version>1.8</java.version>
@@ -15,18 +17,9 @@
     <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-json</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>neverpile-commons-condition</module>
+  </modules>
 
   <dependencyManagement>
     <dependencies><!-- Spring-Boot -->
