Move utils to separate module

--- a/neverpile-commons-condition/pom.xml
+++ b/neverpile-commons-condition/pom.xml
@@ -10,6 +10,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.neverpile.commons</groupId>
+      <artifactId>neverpile-commons-util</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-json</artifactId>
     </dependency>
