--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 
   <modules>
     <module>neverpile-commons-condition</module>
+    <module>neverpile-commons-openapi</module>
+    <module>neverpile-commons-swagger-ui</module>
   </modules>
 
   <dependencyManagement>
