--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>neverpile-commons-swagger-ui</module>
     <module>neverpile-commons-authorization</module>
     <module>neverpile-commons-util</module>
+    <module>neverpile-commons-opentracing</module>
   </modules>
 
   <dependencyManagement>
