--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,6 +1,12 @@
-name: Continuous Integration (pull-request checks)
+name: Continuous Integration
 
-on: [push]
+on: 
+  push:
+    branches-ignore:
+      - master
+    paths-ignore:
+      - '.github/**'
+      - '**/README.md'
 
 jobs:
   build:
