feat: add lock-management and JPA-based implementation

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>neverpile-commons-util</module>
     <module>neverpile-commons-opentracing</module>
     <module>neverpile-commons-actuator</module>
+    <module>neverpile-commons-locking</module>
   </modules>
 
   <dependencyManagement>
