--- a/neverpile-commons-locking/pom.xml
+++ b/neverpile-commons-locking/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>neverpile-commons-opentracing</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.neverpile.commons</groupId>
+      <artifactId>neverpile-commons-openapi</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
