--- a/neverpile-commons-locking/pom.xml
+++ b/neverpile-commons-locking/pom.xml
@@ -25,11 +25,6 @@
 
     <dependency>
       <groupId>com.neverpile.commons</groupId>
-      <artifactId>neverpile-commons-opentracing</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.neverpile.commons</groupId>
       <artifactId>neverpile-commons-openapi</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -49,20 +44,25 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
+<!--       <exclusions> -->
+<!--         <exclusion> -->
+<!--           <groupId>junit</groupId> -->
+<!--           <artifactId>junit</artifactId> -->
+<!--         </exclusion> -->
+<!--         <exclusion> -->
+<!--           <groupId>org.junit.vintage</groupId> -->
+<!--           <artifactId>junit-vintage-engine</artifactId> -->
+<!--         </exclusion> -->
+<!--       </exclusions> -->
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
