--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,34 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M4</version>
+        <configuration>
+          <excludes>
+            <exclude>**/*IT.java</exclude>
+          </excludes>
+          <forkMode>once</forkMode>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <skipITs>${skipIntegrationTests}</skipITs>
+          <forkMode>once</forkMode>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.2.1</version>
         <executions>
@@ -83,7 +111,7 @@
             <manifestEntries>
               <Build-Number>${git.build.number}</Build-Number>
               <Build-Timestamp>${git.build.time}</Build-Timestamp>
-              
+
               <Git-Hash>${git.commit.id.full}</Git-Hash>
               <Git-Tags>${git.tags}</Git-Tags>
 
