--- a/neverpile-commons-locking/pom.xml
+++ b/neverpile-commons-locking/pom.xml
@@ -22,7 +22,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    
     <dependency>
       <groupId>com.neverpile.commons</groupId>
       <artifactId>neverpile-commons-openapi</artifactId>
