--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,15 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
       <plugin>
