--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -5,7 +5,6 @@ on:
     branches-ignore:
       - master
     paths-ignore:
-      - '.github/**'
       - '**/README.md'
 
 jobs:
@@ -28,13 +27,14 @@ jobs:
     - name: Perform build
       run: mvn verify
 
-    ## Notify Slack
-    - name: Notify slack
-      uses: hennejg/slack-build-notifier@v1.1
+    ## Notify Mattermost
+    - name: Notify Developers
+      uses: 8398a7/action-slack@v3
       with:
         username: GitHub
         icon_emoji: octocat
+        status: ${{ job.status }}
+        fields: repo,message,commit,author,action,eventName,ref
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      if: always()
+        if: ${{ github.actor != 'dependabot[bot]' }}
