fix(INF-19): add updateReadme job to release workflow

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -14,3 +14,9 @@ jobs:
     with:
       mattermostChannel: 'neverpile-ci'
       jdkVersion: '11'
+  updateReadme:
+    needs: build
+    uses: levigo/reusable-workflows/.github/workflows/update-readme-md.yml@v3
+    secrets: inherit
+    with:
+      releaseVersion: ${{ needs.build.outputs.releaseVersion }}
