--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring-boot.version>3.1.5</spring-boot.version>
+    <h2.version>2.2.224</h2.version>
+    <snakeyaml.version>2.2</snakeyaml.version>
   </properties>
 
   <modules>
@@ -37,6 +39,16 @@
         <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
