--- a/neverpile-commons-swagger-ui/pom.xml
+++ b/neverpile-commons-swagger-ui/pom.xml
@@ -9,7 +9,8 @@
   <artifactId>neverpile-commons-swagger-ui</artifactId>
 
   <properties>
-    <swagger.version>2.2.9</swagger.version>
+    <swagger.version>2.2.20</swagger.version>
+    <swagger-ui.version>4.19.1</swagger-ui.version>
   </properties>
   
   <dependencies>
@@ -51,7 +52,7 @@
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>swagger-ui</artifactId>
-      <version>4.18.1</version>
+      <version>${swagger-ui.version}</version>
     </dependency>
   </dependencies>
 
