--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,14 @@
         <version>3.11.0</version>
         <configuration>
           <release>${java.version}</release>
+          <!-- required for [Parameter Name Discovery](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.2-Release-Notes#parameter-name-discovery) -->
+          <parameters>true</parameters>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.3</version>
         <configuration>
           <excludes>
             <exclude>**/*IT.java</exclude>
@@ -73,7 +75,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.3</version>
         <configuration>
           <skipITs>${skipIntegrationTests}</skipITs>
           <forkCount>1</forkCount>
@@ -90,7 +92,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -101,9 +103,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
-        <version>4.9.10</version>
+        <groupId>io.github.git-commit-id</groupId>
+        <artifactId>git-commit-id-maven-plugin</artifactId>
+        <version>7.0.0</version>
         <executions>
           <execution>
             <id>get-the-git-infos</id>
