--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.neverpile.commons</groupId>
   <artifactId>neverpile-commons</artifactId>
@@ -23,6 +23,7 @@
     <module>neverpile-commons-swagger-ui</module>
     <module>neverpile-commons-authorization</module>
     <module>neverpile-commons-util</module>
+    <module>neverpile-commons-opentelemetry</module>
     <module>neverpile-commons-opentracing</module>
     <module>neverpile-commons-actuator</module>
     <module>neverpile-commons-locking</module>
@@ -40,7 +41,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -48,7 +49,7 @@
       <optional>true</optional>
     </dependency>
   </dependencies>
-  
+
   <build>
     <plugins>
       <plugin>
