fix(NF-1351): use latest reusable workflow cd version

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    uses: levigo/reusable-workflows/.github/workflows/continuous-delivery-np.yml@v3
+    uses: levigo/reusable-workflows/.github/workflows/continuous-delivery-np.yml@latest
     secrets: inherit
   updateReadme:
     needs: build
