--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     uses: levigo/reusable-workflows/.github/workflows/continuous-delivery-np.yml@latest
     secrets: inherit
+    with:
+      multiModule: true
   updateReadme:
     needs: build
     uses: levigo/reusable-workflows/.github/workflows/update-readme-md.yml@v3
