fix(INF-57): update gitHub Actions for Node 20

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -15,7 +15,7 @@ jobs:
       multiModule: true
   updateReadme:
     needs: build
-    uses: levigo/reusable-workflows-pub/.github/workflows/update-readme-md.yml@v1
+    uses: levigo/reusable-workflows-pub/.github/workflows/update-readme-md.yml@latest
     secrets: inherit
     with:
       releaseVersion: ${{ needs.build.outputs.releaseVersion }}
