feat(NF-1618): impl. license check

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring-boot.version>3.2.7</spring-boot.version>
+    <jadice-license.version>0.11.4</jadice-license.version>
   </properties>
 
   <modules>
@@ -27,6 +28,7 @@
     <module>neverpile-commons-opentracing</module>
     <module>neverpile-commons-actuator</module>
     <module>neverpile-commons-locking</module>
+    <module>neverpile-commons-license</module>
   </modules>
 
   <dependencyManagement>
