feat(NF-2343): Fix JDK version in CD

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -13,6 +13,7 @@ jobs:
     secrets: inherit
     with:
       multiModule: true
+      jdkVersion: 21
   updateReadme:
     needs: build
     uses: levigo/reusable-workflows-pub/.github/workflows/update-readme-md.yml@latest
