fix(NF-2326): update concurrency settings in CI/CD workflows

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -7,6 +7,10 @@ on:
     paths-ignore:
       - '**/README.md'
 
+concurrency:
+  group: cd-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   build:
     uses: levigo/reusable-workflows-pub/.github/workflows/continuous-delivery-np.yml@latest
